@@ -12,6 +12,7 @@ Bug fixes
  - [web] fixed JavaScript exception after renaming an address book
  - [web] fixed Sieve folder encoding support (#3904)
  - [web] fixed ordering of calendars when renaming or adding a calendar (#3931)
+ - [web] use the organizer's alarm by default when accepting IMIP messages (#3934)
 
 3.2.4 (2016-12-01)
 ------------------
